--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "lotide",
+  "name": "@butlerlr/lotide",
   "version": "1.0.0",
-  "description": "",
-  "main": "assertArraysEqual.js",
+  "description": "Lotide, a learning project clone of Lodash",
+  "main": "index.js",
   "directories": {
     "test": "test"
   },
